--- a/src/index.scss
+++ b/src/index.scss
@@ -4,3 +4,5 @@
 @use '../styles/main-scss/main/main-aside' as *;
 @use '../styles/main-scss/main/main' as *;
 @use '../styles/main-scss/main/main-LeftSection' as *;
+@use '../styles/main-scss/main/main-RightSection' as *;
+
