--- a/styles/main-scss/main/_main.scss
+++ b/styles/main-scss/main/_main.scss
@@ -1,24 +1,34 @@
+/* Контейнеры — ок */
 .main--content {
-    display: grid;
-    grid-template-rows: auto 1fr;
-    grid-template-columns: 1fr;
-    min-height: 100vh;
-    overflow: hidden;
-    max-width: 100%;
-    justify-items: center;
-}
-
-.main--content-head {
-    grid-row: 1;
-    grid-column: 1;
-    width: 80%;
-    justify-items: center;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: 1fr;
+  min-height: 100vh;
+  overflow: hidden;
+  max-width: 100%;
+  justify-items: center; /* ок */
 }
 
 .main--content-main {
-    grid-row: 2;
-    grid-column: 1;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 2rem;
+  display: grid;
+  grid-template-columns: 20rem 1fr; /* слева фикс, справа растяжка */
+  gap: 1rem;
+  align-items: start;
+}
+
+.main--content-head {
+  display: flex;
+  flex-direction: column;
+  align-items: center;   /* центр по поперечной оси */
+  justify-content: center;
+  width: 100%;
+}
+
+
+.main--content-right{
+  display: flex;
+  flex-direction: row;
+  align-items: center;   /* центр по поперечной оси */
+  justify-content: start;
+
 }
