--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,8 @@
 @use '../styles/main-scss/main/main' as *;
 @use '../styles/main-scss/main/main-LeftSection' as *;
 @use '../styles/main-scss/main/main-RightSection' as *;
+@use '../styles/main-scss/main/menu-add/adder';
+@use '../styles/main-scss/main/tasks/tasks';
 
 
 
