--- a/src/index.css
+++ b/src/index.css
@@ -433,12 +433,12 @@ body {
 
 .main--content-left {
   display: flex;
+  padding: 5%;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 20vw;
-  min-width: 10vw;
-  min-height: 100%;
+  min-width: 20vw;
+  min-height: 30vw;
   flex-wrap: wrap;
   color: white;
 }
