--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,6 @@
 @use '../styles/main-scss/main/main-RightSection' as *;
 @use '../styles/main-scss/main/menu-add/adder';
 @use '../styles/main-scss/main/tasks/tasks';
-
+@use '../styles/main-scss/main/tasks/accept-modal';
 
 
