--- a/styles/main-scss/main/_main-LeftSection.scss
+++ b/styles/main-scss/main/_main-LeftSection.scss
@@ -6,11 +6,12 @@
 
     display: flex;
     padding: 5%;
+    margin-right: 0;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    min-width: 20vw;
-    min-height: 30vw;
+    min-width: 30vw;
+    min-height: 40vw;
     flex-wrap: wrap;
     color: white;
 
@@ -46,7 +47,7 @@
     justify-content: flex-start;
     align-items: center;
     flex: 1;
-
+    box-shadow: 0 0 20px rgb(70, 70, 70);
     border-radius: 1rem;
     margin-left: 1%;
     width: 100%;
